# peadstrat-aarav

./: ARIA_STRATEGY_REPORT.md  FRIEND_STRATEGY_FULL.md  README.md
aria/: .gitignore  cli.py  pyproject.toml
aria/backtest/: costs.py  engine.py  performance.py
aria/config/: experiments.yaml  settings.yaml
aria/data/: edgar.py  universe.py
aria/data/ingestion/: earnings.py  edgar_loader.py  price.py  simfin_loader.py  sue_loader.py  yf_price_store.py  yfinance_earnings.py
aria/data/store/: lake.py
aria/docs/superpowers/plans/: 2026-07-05-sue-risk-improvements.md
aria/docs/superpowers/specs/: 2026-07-05-sue-signal-risk-improvements-design.md
aria/portfolio/: scorer.py
aria/research/: ablation.py  phase3_runner.py  tracker.py
aria/scripts/: download_eodhd_consensus.py  download_fmp_consensus.py
aria/signals/: __init__.py  base.py  bsq.py  esqs.py  hmm.py  ifr.py  ivrs.py  pead.py  rmv.py  sentiment.py  sue.py
aria/tests/: test_ablation.py  test_bsq.py  test_cli.py  test_costs.py  test_earnings.py  test_engine.py  test_esqs.py  test_hmm.py  test_ifr.py  test_integration.py  test_ivrs.py  test_lake.py  test_pead.py  test_performance.py  test_phase3_runner.py  test_price_ingestion.py  test_rmv.py  test_scorer.py  test_simfin_loader.py  test_sue.py  test_tracker.py  test_universe.py  test_yfinance_earnings.py
aria/trading/: README.md  monthly_analysis.py  paper_trader.py  run_daily.bat  run_monthly_analysis.bat
data/parquet/prices/: XLK_2023-10-13_2024-04-10.parquet  XLK_2023-10-13_2024-04-30.parquet
