[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aria"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "yfinance>=0.2.38",
    "cvxpy>=1.4",
    "hmmlearn>=0.3",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mlflow>=2.12",
    "duckdb>=0.10",
    "pyarrow>=15",
    "pytest>=8",
    "pytest-cov>=5",
    "pyyaml>=6",
    "httpx>=0.27",
]

[project.scripts]
aria = "aria.cli:main"

[tool.setuptools]
package-dir = {"aria" = "."}
packages = [
    "aria",
    "aria.data",
    "aria.data.ingestion",
    "aria.data.store",
    "aria.signals",
    "aria.backtest",
    "aria.portfolio",
    "aria.research",
    "aria.tests",
    "aria.trading",
]
